--- a/.env
+++ b/.env
@@ -1,11 +1,18 @@
+# Postgres
 POSTGRES_DB=gym
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 
+# PGAdmin
 PGADMIN_DEFAULT_EMAIL=admin@mail.ru
 PGADMIN_DEFAULT_PASSWORD=123
 PGADMIN_LISTEN_PORT=5050
 
+# Prisma
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}?schema=public"
+
+# NextAuth
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET=ksljjkFkdqnguckskjcitlB
