--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.11.0",
+    "bcrypt": "^5.1.1",
+    "multer": "^1.4.5-lts.1",
     "next": "14.1.4",
+    "next-auth": "^4.24.7",
+    "next-connect": "^1.0.0",
     "prisma": "^5.11.0",
     "react": "^18",
     "react-dom": "^18",
@@ -21,6 +25,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^18",
