--- a/.env
+++ b/.env
@@ -1,18 +1,18 @@
-# Postgres
+# Postgres для создания БД
 POSTGRES_DB=gym
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 
-# PGAdmin
+# PGAdmin для управления БД
 PGADMIN_DEFAULT_EMAIL=admin@mail.ru
 PGADMIN_DEFAULT_PASSWORD=123
 PGADMIN_LISTEN_PORT=5050
 
-# Prisma
+# Prisma для миграций
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}?schema=public"
 
-# NextAuth
+# NextAuth авторизации
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET=ksljjkFkdqnguckskjcitlB
